UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/FridayStart__c.field-meta.xml
<CustomField>
    <fullName>FridayStart__c</fullName>
    <label>Friday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>