UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/FridayStop__c.field-meta.xml
<CustomField>
    <fullName>FridayStop__c</fullName>
    <label>Friday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>