UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>Time_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>