UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/MenuName__c.field-meta.xml
<CustomField>
    <fullName>MenuName__c</fullName>
    <formula>Menu__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MenuName</label>
    <type>Text</type>
</CustomField>