UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/MondayStart__c.field-meta.xml
<CustomField>
    <fullName>MondayStart__c</fullName>
    <label>Monday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>