UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/MondayStop__c.field-meta.xml
<CustomField>
    <fullName>MondayStop__c</fullName>
    <label>Monday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>