UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/Overflow_Destination__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Destination__c</fullName>
    <label>Overflow Destination</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>