UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/Overflow_Timer__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Timer__c</fullName>
    <label>Overflow Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>