UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/SaturdayStart__c.field-meta.xml
<CustomField>
    <fullName>SaturdayStart__c</fullName>
    <label>Saturday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>