UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/SaturdayStop__c.field-meta.xml
<CustomField>
    <fullName>SaturdayStop__c</fullName>
    <label>Saturday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>