UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>