UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>