UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/SundayStart__c.field-meta.xml
<CustomField>
    <fullName>SundayStart__c</fullName>
    <label>Sunday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>