UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/SundayStop__c.field-meta.xml
<CustomField>
    <fullName>SundayStop__c</fullName>
    <label>Sunday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>