UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/ThursdayStart__c.field-meta.xml
<CustomField>
    <fullName>ThursdayStart__c</fullName>
    <label>Thursday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>