UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/ThursdayStop__c.field-meta.xml
<CustomField>
    <fullName>ThursdayStop__c</fullName>
    <label>Thursday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>