UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/TuesdayStart__c.field-meta.xml
<CustomField>
    <fullName>TuesdayStart__c</fullName>
    <label>Tuesday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>