UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/TuesdayStop__c.field-meta.xml
<CustomField>
    <fullName>TuesdayStop__c</fullName>
    <label>Tuesday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>