UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/WednesdayStart__c.field-meta.xml
<CustomField>
    <fullName>WednesdayStart__c</fullName>
    <label>Wednesday Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>