UCF-APR2.4/ftr main/force-app/main/default/objects/Time_Period__c/fields/WednesdayStop__c.field-meta.xml
<CustomField>
    <fullName>WednesdayStop__c</fullName>
    <label>Wednesday Stop</label>
    <length>10</length>
    <type>Text</type>
</CustomField>